Fix centering of contact on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ header a:hover {
 	color: #ffffff;
 	font-size: 16px;
 	background-color: #555555;
-	padding: 5px 0 5px 20px;
+	padding: 5px 20px;
 }
 
 /* Footer */
